feat: dashboard payment features
